--- a/css/style.css
+++ b/css/style.css
@@ -45,3 +45,20 @@ body {
     font-size: 1.1em;
     cursor: pointer;
 }
+
+@media all and (max-width: 600px) {
+    .quotebox {
+        width: 90%;
+        margin-right: 10px;
+        padding-right: 10px;
+    }
+
+    .quote-text-container {
+        margin-left: 20px;
+        height: 300px;
+    }
+
+    .quote-button {
+        margin-right: 0px;
+    }
+}
